2018-05-31 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Treat definitions in non-standard user files as global (not directly editable), in order to avoid duplication

2018-05-30 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add "to base #" conversion
	* Lunar phase functions

2018-05-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Calendar conversion
	* Add "to" conversion for display of numbers in roman, sexagesimal, or time format

2018-05-21 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Search for matching functions, variables and units using 'list' (or 'find') command in qalc
	* Improved ln() simplifications

2018-05-19 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not automatically convert to broken down composite unit c for x*a+x*b (and similar),
	  if a and b are both aliases for c
	* Allow 1°2'3" format for degree, arminute and arcsecond
	* Add arcsec and armin reference name to Arcminute and Arcsecond
	* Use prime symbols for sexagesimal output format

2018-05-18 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix crash when expression contains '>', '<' or '=', and libqalculate is compiled with -D_GLIBCXX_ASSERTIONS
	* Allow 5'8" format for feet and inches

2018-05-16 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Treat rates.json with "Internal Server Error" message as failed exchange rates download

2018-05-14 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Ignore empty lines and lines beginning with # or // in batch file

2018-05-13 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix never ending loop in (-x)^(2/3) if x is assumed negative
	* Fix x/(x^(3/4)+x) and similar when x is assumed positive

2018-05-06 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Improved series titles in plot()
	* Derivative for bessely()
	* Improved product log deriative

2018-05-03 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add titles to currency list in qalc

2018-05-01 Hanna Knutsson <hanna.knutsson@protonmail.com>
